--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Song10 Blog <3
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Song10 Matsuda
+  email : song10@gmail.com
+  github : song10
+#  twitter : username
+#  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://song10.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -80,6 +80,7 @@ JB :
   #
   comments :
     provider : disqus
+#   provider : facebook
     disqus :
       short_name : jekyllbootstrap
     livefyre :
@@ -87,7 +88,7 @@ JB :
     intensedebate :
       account : 123abc
     facebook :
-      appid : 123
+      appid : song10
       num_posts: 5
       width: 580
       colorscheme: light
